wrapping fix issue #28

--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -20,13 +20,12 @@ atom-panel.modal,
     .text(light);
     font-size: 24px;
     line-height: 32px;
-    height: 32px + @component-padding;
+    height: auto;
     max-height: none;
-    white-space: nowrap;
     color: @text-color-highlight;
     background-color: transparent;
     margin: 0 -@component-padding*2;
-    padding: 0 @component-padding*2;
+    padding: 0 @component-padding*2 @component-padding @component-padding*2;
     border: 0;
     border-radius: 0;
     border-bottom: 1px solid @base-border-color;
